# ChangeLog for dev-python/dexml
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Feb 2011; James Rowe <jnrowe@gmail.com> dexml-0.4.0.ebuild:
  Keyworded amd64.

*dexml-0.4.0 (13 Jan 2011)

  13 Jan 2011; James Rowe <jnrowe@gmail.com> +dexml-0.4.0.ebuild:
  Version bump [257].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Dec 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.6.ebuild,
  dexml-0.3.7.ebuild:
  Keyworded x86.

  06 Dec 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.7.ebuild:
  Keyworded amd64.

*dexml-0.3.7 (03 Nov 2010)

  03 Nov 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.7.ebuild:
  Version bump [208].

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  05 Jul 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.5.ebuild,
  dexml-0.3.6.ebuild:
  Keyworded x86.

  05 Jul 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.6.ebuild:
  Keyworded amd64.

*dexml-0.3.6 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.6.ebuild:
  Version bump [5b5].

  20 May 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.4.ebuild,
  dexml-0.3.5.ebuild:
  Keyworded x86.

  20 May 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.5.ebuild:
  Keyworded amd64.

*dexml-0.3.5 (20 Apr 2010)

  20 Apr 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.5.ebuild:
  Version bump [bc2].

  05 Apr 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.3.ebuild,
  dexml-0.3.4.ebuild:
  Keyworded x86.

  05 Apr 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.4.ebuild:
  Keyworded amd64.

  31 Mar 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.1.ebuild,
  dexml-0.3.3.ebuild:
  Keyworded x86.

  31 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.3.ebuild:
  Keyworded amd64.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.1.ebuild,
  dexml-0.3.3.ebuild, dexml-0.3.4.ebuild:
  Added PYTHON_DEPEND setting.
