@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST dexml-0.3.7.tar.gz 17496 RMD160 5675193f0d5219826517068882a9464b952d6dec SHA1 74e7781d0643af9291ee9c0267b14e1f2b67490a SHA256 79af2724d99284710009e1ae77cb045d496ca16bc7b273bcab87633e284be4f7
 DIST dexml-0.4.0.tar.gz 18514 RMD160 193b22827dfafd23da6a671ba1a6aa5ff14c2d05 SHA1 05c4e99a725cd0e22d7793f3501b785653535ce1 SHA256 79219138fab93f474b60c9430346b68e0acf808ba36c40ffadaec2e84c7c8a80
-EBUILD dexml-0.3.7.ebuild 410 RMD160 1b0e227fa7ce7244b7dd86a9a72f2cc3ddf3b754 SHA1 635a1c6c8a3a90acaf3a93cfbc40d96610ce1df2 SHA256 47f767d53a69d7fc9006be5b4d206b393dfe4727143e99c09400c4040625723e
-EBUILD dexml-0.4.0.ebuild 411 RMD160 6d379bfe444388e718a83528ff03c1d5056064a4 SHA1 ae5998eaf8bde7f9f00cc31c937e6375c041c273 SHA256 327a627bca982049e2a20f902651814391e11ca7f3570fea115486be865662a0
-MISC ChangeLog 2488 RMD160 0b71427566cd36aef438b8a6720f749b8dc52d45 SHA1 02e95b597eddd1cc437d9b23b86772cea6f9e827 SHA256 26ac5f6a091e4569807487f26cf617145041881f0a1ca944da675ec3757217c1
+EBUILD dexml-0.4.0.ebuild 410 RMD160 1b0e227fa7ce7244b7dd86a9a72f2cc3ddf3b754 SHA1 635a1c6c8a3a90acaf3a93cfbc40d96610ce1df2 SHA256 47f767d53a69d7fc9006be5b4d206b393dfe4727143e99c09400c4040625723e
+MISC ChangeLog 2594 RMD160 8b058856877bfd57030fca809d8eaea698d3a2f7 SHA1 926c47a4003ebc78f857e2ece4b2493841197990 SHA256 c5089beb44db7c13a41df3e2eed307652271c6e3b3fd053db8b4ce7058bf4f1f
 MISC metadata.xml 1000 RMD160 4ed662d1a71dc57434d7a7ddeb1e01519ecb7436 SHA1 42f2fc486405b6b97712d87b0067b8f39142a0b6 SHA256 3a9d11ab073b120a4b5a6ec8e6f618642a1a31a714c65619b78e50f47d70755a
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk1WU88ACgkQzJrj3cAXR0lGuwCfax95E3j15hgRIMnfx1f3kmBR
-+EAAnRWMdqVU0SJajaC5B6DKpW5h5c4L
-=hEbD
+iEYEARECAAYFAk1WVgwACgkQzJrj3cAXR0mUvgCgpI5euMbaCAVvSUGt0IDvMfkP
+l+YAni02sYqR8s6BFISjUvFjXVmXrX1g
+=vAWy
 -----END PGP SIGNATURE-----
