@@ -6,7 +6,7 @@ mirror://pypi/d/dexml/dexml-0.4.0.tar.gz
 http://pypi.python.org/pypi/dexml/
 MIT
 A dead-simple Object-XML mapper for Python
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
