@@ -1,4 +1,3 @@
-REM 2011-02-12 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/dexml-0.4.0 %a
 REM 2011-02-13 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/interlude-1.1.1 %a
 REM 2011-02-13 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/interlude-1.1.1 %a
 REM 2011-02-14 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-util/cram-0.5 %a
