@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Feb 2011; James Rowe <jnrowe@gmail.com> -dexml-0.3.7.ebuild,
+  dexml-0.4.0.ebuild:
+  Keyworded x86.
+
   12 Feb 2011; James Rowe <jnrowe@gmail.com> dexml-0.4.0.ebuild:
   Keyworded amd64.
 
